##  Makefile.am
# 
# Copyright (C) 2009  The University of Texas at Austin.
# 
# This file is part of Hydra: A wireless multihop testbed.
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
# 

include $(top_srcdir)/Makefile.common

meta80211nsrcdir=$(top_srcdir)/src
META80211N_INCLUDES =

INCLUDES = $(META80211N_INCLUDES) $(STD_DEFINES_AND_INCLUDES)

noinst_LTLIBRARIES = libmeta-80211n-common.la
libmeta_80211n_common_la_SOURCES = foo.cc
libmeta_80211n_common_la_LDFLAGS =
libmeta_80211n_common_la_LIBADD  =

metainclude_HEADERS = foo.h
